--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
           <img src="https://cdn-icons-png.flaticon.com/512/4225/4225950.png" class="w-25 mx-auto mt-3" alt="Noticias">
           <h5 class="mt-3">Noticias</h5>
           <p>Mantente al día con los anuncios más recientes del colegio.</p>
-          <a href="#" class="btn btn-outline-success">Ver más</a>
+          <a href="https://juandelcorral.edu.co/" class="btn btn-outline-success">Ver más</a>
         </div>
       </div>
     </div>
@@ -138,3 +138,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
