--- a/contacto.html
+++ b/contacto.html
@@ -59,7 +59,7 @@
         <div class="col-md-4">
           <div class="p-3">
             <h6 class="fw-bold">Correo institucional</h6>
-            <p>contacto@conectaedu.edu.co</p>
+            <p>tucorreo@juandelcorral.edu.co</p>
           </div>
         </div>
         <div class="col-md-4">
@@ -86,3 +86,4 @@
   <script src="script.js"></script>
 </body>
 </html>
+
